# mutka

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMUNITY_MODULES.md  INSTALL.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts  vitest.config.ts
.changeset/: README.md  add-changeset-to-handle-versionning-and--ember.md  add-cli-support.md  command-id-inference.md  create-webapge-articles.md  csp-network-chokepoint.md  disable-global-tauri.md  discovery-as-module.md  discovery-dist-fallback.md  discovery-registry.md  drop-deprecated-cocoa.md  event-whitelist-notify-only-tier.md  external-drop-requires-fs-read.md  fast-icons-small-render-disk-cache.md  manage-modules-with-ui-store-config-in-h-amber.md  module-buttons-and-file-picker.md  module-cards-icon-author.md  module-source-size-cap.md  net-request-pure-network.md  network-public-local-tiers.md  redirect-ssrf-config-isolation.md  sdk-types-react-free.md  sidebar-toggle-single-click.md  telemetry-folder-open-timing.md  track-dev-modules-in-git.md  typed-host-and-author-sdk.md  update-aware-install-review.md
.claude/skills/: add-changeset.md  add-open-handler.md  add-sidebar-panel.md  commit-conventions.md  cut-release.md  macos-nsevent.md  new-module.md  new-tauri-command.md  update-docs.md
.githooks/: pre-commit
.github/workflows/: cancel-on-merge.yml  deploy.yml  release-please.yml  release.yml  test.yml
dev-modules/com.dir-stats/: index.js
dev-modules/com.event-monitor/: index.js
dev-modules/com.folder-inspector/: index.js
dev-modules/com.image-dimensions/: index.js
dev-modules/com.sqlite-browser/: index.js
dev-modules/com.webdav/: index.js
docs/: architecture.md  events.md  flows.md  releasing.md  safety.md
scripts/: changeset.mjs  check-changeset.mjs  extract-changelog.mjs  install-cli.sh  install.sh  version.mjs
src/: App.tsx  CLAUDE.md  STYLE_GUIDE.md  main.tsx  moduleLoader.ts  update.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  cli.rs  clipboard.rs  fs_ops.rs  http.rs  icons.rs  lib.rs  main.rs  modules.rs  mouse_nav.rs  preview.rs  secrets.rs  traffic_lights.rs  watcher.rs
src/components/: Breadcrumb.css  CLAUDE.md  ContextMenu.css  ContextMenu.tsx  FileList.css  FileList.tsx
src/components/Breadcrumb/: Breadcrumb.css  Breadcrumb.tsx
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx  icon-registry.ts
src/components/Declarative/: Declarative.css  DeclarativeModal.tsx  DeclarativePanel.tsx  DeclarativeView.tsx  SchemaForm.tsx
src/components/Dialog/: Dialog.css  Dialog.tsx
src/components/FileList/: FileIcon.tsx  FileList.css  FileList.tsx  FileRow.tsx
src/components/FilePicker/: FilePicker.css  FilePickerModal.tsx
src/components/ModulesPanel/: AuthorBadge.tsx  BrowseCatalog.tsx  CatalogCard.tsx  CatalogModuleCard.tsx  InstallReviewDialog.tsx  InstalledList.tsx  ModuleCard.tsx  ModuleIcon.tsx  ModulesPanel.css  ModulesPanel.tsx  PermissionBadges.tsx
src/components/Notifications/: NotificationToasts.css  NotificationToasts.tsx
src/components/Places/: Places.css  Places.tsx
src/components/SettingsPanel/: SettingsPanel.css  SettingsPanel.tsx  WebDavAccounts.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx  SidebarTab.tsx
src/components/StatusBar/: StatusBar.css  StatusBar.tsx
src/components/TabBar/: TabBar.tsx
src/components/Toolbar/: Toolbar.tsx
src/components/UpdateToast/: UpdateToast.css  UpdateToast.tsx
src/core/: CLAUDE.md  EventBus.ts  InputManager.ts  ModuleRegistry.ts  ThemeManager.ts  types.ts
src/core/app-bridge/: AppBridge.ts
src/core/cli/: CliHandler.ts
src/core/columns/: ColumnWidthStore.ts  ColumnsRegistry.ts  column.types.ts
src/core/discovery/: DiscoveryRegistry.ts  types.ts
src/core/drag/: DragService.ts
src/core/event-bus/: EventBus.ts  events.ts
src/core/file-icons/: FileIconRegistry.ts
src/core/file-system/: FileSystemRegistry.ts
src/core/file-watch/: DirectoryWatcher.ts
src/core/input-manager/: InputManager.ts
src/core/menu/: menuZone.ts
src/core/module-registry/: ModuleRegistry.ts  module-registry.types.ts  public-types.ts
src/core/sandbox/: LocalHost.ts  SandboxHost.ts  capabilities.ts  defineModule.ts  eventWhitelist.test.ts  eventWhitelist.ts  gateway.ts  hostProxy.ts  itemMatch.ts  manifestFromDef.ts  permissions.test.ts  probeManifest.ts  protocol.ts  proxyModule.ts  sandbox.worker.ts  whenClause.ts
src/core/shortcut-manager/: ShortcutManager.ts
src/core/stores/: ClipboardStore.ts  HomeStore.ts  ListingStore.ts  ModulesStore.ts  NotificationStore.ts  SelectionStore.ts  SettingsStore.ts  StatusBarStore.ts  UIStore.ts  ViewStore.ts  listing.types.ts
src/core/tab-manager/: TabManager.ts  tab-manager.types.ts
src/core/theme-manager/: ThemeManager.ts  theme-manager.types.ts
src/hooks/: useActiveModal.ts  useAppBridge.ts  useColumnWidths.ts  useColumns.ts  useDialog.ts  useDirectoryListing.ts  useExternalDropGuard.ts  useModules.ts  useNativeThemeSync.ts  useNavigation.ts  useSidebarContributions.ts  useStoreSnapshots.ts  useToolbarFlash.ts  useUISurface.ts
src/module-manager/: CLAUDE.md  DiscoveryRegistry.ts  ModuleManager.ts  authorInfo.ts  descriptors.ts  githubCatalog.ts  githubSource.ts  imageSrc.test.ts  imageSrc.ts  installModule.ts  moduleConfig.ts  openExternal.ts  permissionInfo.ts  probeManifest.ts  types.ts
src/modules/: CLAUDE.md
src/modules/clipboard/: index.ts
src/sandbox-builtins/: auto-refresh.ts  bookmarks.ts  clipboard.ts  drop-import.ts  file-icons.ts  file-ops.ts  github-discovery.ts  home.ts  local-installer.ts  mouse-navigation.ts  navigation.ts  preview.ts  reveal.ts  selection.ts  settings.ts  tabs.ts  telemetry.ts  view-options.ts  webdav.ts
src/styles/: base.css  tokens.css  toolbar.css
website/: .gitignore  Dockerfile  package.json
website/app/: global.css  layout.config.tsx  layout.tsx  sitemap.ts
website/components/: InstallCommand.tsx  ThemedLogo.tsx
website/lib/: docs-content.ts  site.ts
(+32 files in other folders)
