[package]
name = "mutka"
version = "0.1.0"
description = "Community-driven macOS file explorer"
authors = ["Mutka contributors"]
license = "MIT"
homepage = "https://github.com/ilianAZZ/mutka"
repository = "https://github.com/ilianAZZ/mutka"
keywords = ["macos", "file-explorer", "tauri", "modular"]
categories = ["gui"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mutka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP client for the host-proxied `net` capability (WebDAV, etc.).
# Bypasses WebView CORS and keeps network gated behind module permissions.
# native-tls uses macOS Security.framework (no ring/rustls C build); the agent
# must be built with an explicit TLS connector (see http_agent in lib.rs).
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
# macOS Keychain access for the `secrets` capability (WebDAV account passwords).
keyring = "2"
# Decode dropped-file bytes (Finder → app) passed from the WebView as base64.
base64 = "0.22"
# Native OS drag-out (NSDraggingSession with file URLs) so rows dragged to Finder
# or another app carry the real files, not just their text paths.
tauri-plugin-drag = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
