[package]
name = "mutka"
version = "0.2.0"
description = "Community-driven macOS file explorer"
authors = ["Mutka contributors"]
license = "MIT"
homepage = "https://github.com/ilianAZZ/mutka"
repository = "https://github.com/ilianAZZ/mutka"
keywords = ["macos", "file-explorer", "tauri", "modular"]
categories = ["gui"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mutka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
# The unmaintained `objc` 0.2 crate expands `#[cfg(feature = "cargo-clippy")]`
# inside its msg_send!/class!/sel! macros. check-cfg evaluates that cfg against
# THIS crate (the macro expansion site), where no such feature exists, so every
# ObjC call site warns. Whitelist only that value — all other unexpected cfgs
# keep warning normally.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP client for the host-proxied `net` capability (WebDAV, etc.).
# Bypasses WebView CORS and keeps network gated behind module permissions.
# native-tls uses macOS Security.framework (no ring/rustls C build); the agent
# must be built with an explicit TLS connector (see http_agent in lib.rs).
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
# macOS Keychain access for the `secrets` capability (WebDAV account passwords).
keyring = "2"
# Decode dropped-file bytes (Finder → app) passed from the WebView as base64.
base64 = "0.22"
# Parse + classify request URLs for the network:public / network:local tiers
# (public domain + https vs. IP/localhost). See classify_host in http.rs.
url = "2"
# Native OS drag-out (NSDraggingSession with file URLs) so rows dragged to Finder
# or another app carry the real files, not just their text paths.
tauri-plugin-drag = "2"
# Watch the directory currently in view (FSEvents on macOS) so the UI and modules
# (git status, recounts, …) react to on-disk changes. One non-recursive watcher,
# re-armed by read_dir; the frontend debounces. See src/watcher.rs.
notify = "6"
# In-app auto-update: checks the GitHub Release `latest.json`, verifies the
# update signature against the pubkey in tauri.conf.json, downloads + installs.
# `process` provides the relaunch after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# CLI argument parsing (mutka <path>, --picker, --run <action>).
tauri-plugin-cli = "2"
# Forward CLI args to an already-running instance instead of spawning a new one.
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
